# codemate

./: .env.example  .gitignore  README.md  app.py  hello_deepseek.py  pyproject.toml  rag_demo.py  requirements.txt  sample.txt  sample_rag.py  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh  tool_agent.py
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  sandbox.Dockerfile
scripts/: rag_demo.py
src/backend/: config.py  db.py  main.py
src/backend/api/: deps.py
src/backend/api/v1/: chat.py  documents.py  health.py  router.py  tools.py
src/backend/engine/: chunker.py  embedder.py  llm_client.py  rag_pipeline.py  reranker.py  retriever.py
src/backend/engine/agent/: executor.py  tool_registry.py
src/backend/engine/agent/sandbox/: docker_sandbox.py
src/backend/engine/agent/tools/: code_executor.py
src/backend/engine/parser/: base.py  docx_parser.py  pdf_parser.py  pptx_parser.py  registry.py  txt_parser.py
src/backend/models/: db.py  schemas.py
src/backend/services/: chat_service.py  document_service.py  tool_service.py
src/frontend/: api_client.py  app.py  state.py
src/frontend/components/: chat.py  sidebar.py
src/shared/: constants.py
tests/: conftest.py  test_agent_executor.py  test_parser.py  test_rag_pipeline.py
